# ExplorerChess

./: .clang-format  .gitignore  CMakeLists.txt  ExplorerChess.sln  ExplorerChess.vcxproj  ExplorerChess.vcxproj.filters  Makefile  README.md
inc/: Engine.h  EngineInterface.h  GUI.h  attackPext.h  attackPextV2.h  attackRays.h  attacks.h  bitboardUtil.h  bitboardUtilV2.h  evaluate.h  moveGen.h  moveGenV2.h  moveOrdering.h  position.h  robin_hood.h  types.h  zobristHash.h
notes/: buildPerformance.txt  chessIdeas.md
src/: Engine.cpp  EngineInterface.cpp  ExplorerChess.cpp  GUI.cpp  attackPext.cpp  attackPextV2.cpp  attacks.cpp  bitboardUtil.cpp  evaluate.cpp  moveGen.cpp  moveGenV2.cpp  moveOrdering.cpp  position.cpp  zobristHash.cpp
test/: tests.cpp  tests.h
